--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -1,4 +1,5 @@
-= @schemas.to_s.html_safe
+= content_for :head do
+  = @schemas.to_s.html_safe
 
 %section{class: "mt-8 font-messiri max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
   %div{class: "text-center"}
