--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -1,4 +1,5 @@
-= @schema.to_s.html_safe
+= content_for :head do
+  = @schema.to_s.html_safe
 
 %div{class: "container mx-auto my-4 font-messiri"}
   %h1{class: "text-3xl text-red-500 sm:text-4xl text-center leading-normal font-bold"}
