--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -3,13 +3,13 @@
 -#= turbo_frame_tag :landing do
 %div{class: "", id: "hero-section-1"}
   = render "shared/1_hero_section"  
-%div{class: "even wow", id: "services"}
+%div{class: "z-0 even wow", id: "services"}
   = render "shared/2_services"
-%div{class: "odd wow mt-8", id: "hero-section-2"}
+%div{class: "z-100 odd wow mt-8", id: "hero-section-2"}
   = render "shared/3_hero_section"
 -#%div{class: "wow mt-8", id: "prices"}
 -#  = render "shared/4_prices"
-%div{class: "even wow mt-8", id: "about"}
+%div{class: "z-0 even wow mt-8", id: "about"}
   = render "shared/5_about"
 -#%div{class: "wow mt-8", id: "reviews"}
 -#  = render "shared/6_reviews"
