--- a/app/views/shared/_3_hero_section.html.haml
+++ b/app/views/shared/_3_hero_section.html.haml
@@ -5,6 +5,6 @@
   
   %div{"data-controller": "landing--gallery"}
     .gallery
-      = image_tag "1-min.jpg", "data-target": "landing--gallery.image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "1"
-      = image_tag "2-min.jpg", "data-target": "landing--gallery.image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "1"
-      = image_tag "3-min.jpg", "data-target": "landing--gallery.image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "1"
+      = image_tag "1-min.jpg", "data-target": "landing--gallery.image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог"
+      = image_tag "2-min.jpg", "data-target": "landing--gallery.image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог"
+      = image_tag "3-min.jpg", "data-target": "landing--gallery.image", class: "transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0 object-cover object-center w-full mb-8 lg:h-48 rounded-xl", alt: "Швейная мастерская ☞ДРУЖБА☜ Кривой рог"
