--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -71,16 +71,15 @@
 }
 
 .gallery {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  position: relative; /* добавляем относительное позиционирование */
+  display: grid;
+  gap: 10px;
 }
 
 .gallery img {
-  width: 24em;
-  margin: 10px;
-  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
 }
 
 .gallery img.active {
@@ -93,3 +92,105 @@
   z-index: 10000; /* приоритетный z-index */
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+
+
+@media (max-width: 320px) {
+  .gallery {
+     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+   }
+ }
+@media (max-width: 640px) {
+ .gallery {
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  }
+}
+
+@media (max-width: 768px) {
+ .gallery {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  }
+}
+
+@media (max-width: 1024px) {
+ .gallery {
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  }
+}
+
+@media (max-width: 1280px) {
+ .gallery {
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  }
+}
+
+@media (max-width: 1536px) {
+ .gallery {
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  }
+}
+
+/*-------*/
+@media (max-width: 640px) {
+  .gallery img.active{
+    position: fixed; /* добавляем абсолютное позиционирование */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1.5); /* центр масштаба */
+    width: auto; /* ширина 80% от ширины экрана */
+    height: 10vh; /* высота автоматически */
+    z-index: 10000; /* приоритетный z-index */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+   }
+ }
+ 
+ @media (max-width: 768px) {
+  .gallery img.active {
+    position: fixed; /* добавляем абсолютное позиционирование */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1.5); /* центр масштаба */
+    width: auto; /* ширина 80% от ширины экрана */
+    height: 30vh; /* высота автоматически */
+    z-index: 10000; /* приоритетный z-index */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+   }
+ }
+ 
+ @media (max-width: 1024px) {
+  .gallery img.active {
+    position: fixed; /* добавляем абсолютное позиционирование */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1.5); /* центр масштаба */
+    width: auto; /* ширина 80% от ширины экрана */
+    height: 60vh; /* высота автоматически */
+    z-index: 10000; /* приоритетный z-index */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+   }
+ }
+ 
+ @media (max-width: 1280px) {
+  .gallery img.active {
+    position: fixed; /* добавляем абсолютное позиционирование */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1.5); /* центр масштаба */
+    width: auto; /* ширина 80% от ширины экрана */
+    height: 60vh; /* высота автоматически */
+    z-index: 10000; /* приоритетный z-index */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+   }
+ }
+ 
+ @media (max-width: 1536px) {
+  .gallery img.active {
+    position: fixed; /* добавляем абсолютное позиционирование */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1.5); /* центр масштаба */
+    width: auto; /* ширина 80% от ширины экрана */
+    height: 60vh; /* высота автоматически */
+    z-index: 10000; /* приоритетный z-index */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+   }
+ }
