--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,22 +19,23 @@
 
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload"
-    = stylesheet_link_tag "application", "inter-font", "data-turbo-track": "reload"
-    = stylesheet_link_tag "custom", "data-turbo-track": "reload"
-    = javascript_include_tag 'application', 'data-turbo-track': 'reload', defer: true, async: ""
+    = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload", nonce: @csp_nonce
+    = stylesheet_link_tag "application", "inter-font", "data-turbo-track": "reload", nonce: @csp_nonce
+    = stylesheet_link_tag "custom", "data-turbo-track": "reload", nonce: @csp_nonce
+    = javascript_include_tag "application", "data-turbo-track": "reload", defer: true, async: "", nonce: @csp_nonce
+
 
     -# CookieBot
-    %script#CookieDeclaration{src: "https://consent.cookiebot.com/b96db7a3-49c9-4675-a08d-7f34dbddfb4e/cd.js", type: "text/javascript"}
+    %script#CookieDeclaration{src: "https://consent.cookiebot.com/b96db7a3-49c9-4675-a08d-7f34dbddfb4e/cd.js", type: "text/javascript", nonce: @csp_nonce}
 
     -# FlowbiteJS
-    %link{href: "https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.5.1/flowbite.min.css", rel: "stylesheet"}
-    %script{async: "", src: "https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.5.1/flowbite.min.js"}
+    %link{href: "https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.5.1/flowbite.min.css", rel: "stylesheet", nonce: @csp_nonce}
+    %script{async: "", src: "https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.5.1/flowbite.min.js", nonce: @csp_nonce}
 
     %noscript
       %img{height: "1", width: "1",
           src: "https://www.facebook.com/tr?id=1562402937679169&ev=PageView&noscript=1",
-          style: "display:none"}
+          style: "display:none", nonce: @csp_nonce}
   
   %body{class: "bg-stone-100", id: "main", "data-controller": "landing--index"}
     %navigation{class: ""}
