--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -3,13 +3,13 @@
 -#= turbo_frame_tag :landing do
 %div{class: "", id: "hero-section-1"}
   = render "shared/1_hero_section"  
-%div{class: "z-0", id: "services", "data-aos": "fade-up-right", "data-aos-duration": "600", "data-aos-anchor-placement": "top-center"}
+%div{class: "z-0", id: "services", "data-aos": "zoom-in-up"}
   = render "shared/2_services"
-%div{class: "z-100 mt-8", id: "hero-section-2", "data-aos": "fade-up-left", "data-aos-duration": "600", "data-aos-anchor-placement": "top-center"}
+%div{class: "z-100 mt-8", id: "hero-section-2", "data-aos": "zoom-in-down"}
   = render "shared/3_hero_section"
-%div{class: "z-0 mt-8", id: "about", "data-aos": "fade-up-right", "data-aos-duration": "600", "data-aos-anchor-placement": "top-center"}
+%div{class: "z-0 mt-8", id: "about", "data-aos": "zoom-in-up"}
   = render "shared/5_about"
-%div{class: "mt-8", id: "faq", "data-aos": "fade-up-left", "data-aos-duration": "600", "data-aos-anchor-placement": "top-center"}
+%div{class: "mt-8", id: "faq", "data-aos": "zoom-in-down"}
   = render "shared/7_faq"
-%div{class: "mt-8", id: "contacts", "data-aos": "fade-up-right", "data-aos-duration": "600", "data-aos-anchor-placement": "top-center"}
+%div{class: "mt-8", id: "contacts", "data-aos": "zoom-in-up"}
   = render "shared/8_contacts"
