--- a/app/views/landing/index.html.haml
+++ b/app/views/landing/index.html.haml
@@ -3,7 +3,7 @@
 -#= turbo_frame_tag :landing do
 %div{class: "", id: "hero-section-1"}
   = render "shared/1_hero_section"  
-%div{class: "z-0", id: "services", "data-aos": "zoom-in-up"}
+%div{class: "z-0", id: "services"}
   = render "shared/2_services"
 %div{class: "z-100 mt-8", id: "hero-section-2", "data-aos": "zoom-in-down"}
   = render "shared/3_hero_section"
