--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -38,7 +38,7 @@
     %noscript
       %img{height: "1", width: "1",
           src: "https://www.facebook.com/tr?id=1562402937679169&ev=PageView&noscript=1",
-          style: "display:none", nonce: @csp_nonce}
+          style: "display:none"}
   
   %body{class: "bg-stone-100", id: "main", "data-controller": "landing--index"}
     %navigation{class: ""}
