--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -7,9 +7,9 @@
       "headline": "#{article.title}",
       "description": "#{article.description}",
       "logo": "#{article.image}",
-      "url": "#{article_url(article)}"
-      "datePublished":"#{article.created_at}"
-      "dateModified": "#{article.updated_at}"
+      "url": "#{article_url(article)}",
+      "datePublished":"#{article.created_at}",
+      "dateModified": "#{article.updated_at}",
       }
 
 %section{class: "mt-8 font-messiri max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex flex-col justify-between"}
