--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,32 +19,31 @@
 
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload", nonce: :nonce
-    = stylesheet_link_tag "application", "https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&display=swap", "https://fonts.googleapis.com/css2?family=Bad+Script&family=messiri:wght@400..700&display=swap", "inter-font", "data-turbo-track": "reload", nonce: :nonce
-    = stylesheet_link_tag "custom", "data-turbo-track": "reload", nonce: :nonce
-    = javascript_include_tag "application", "data-turbo-track": "reload", defer: true, async: "", nonce: :nonce
+    = stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload", nonce: true
+    = stylesheet_link_tag "application", "https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&display=swap", "https://fonts.googleapis.com/css2?family=Bad+Script&family=messiri:wght@400..700&display=swap", "inter-font", "data-turbo-track": "reload", nonce: true
+    = stylesheet_link_tag "custom", "data-turbo-track": "reload", nonce: true
+    = javascript_include_tag "application", "data-turbo-track": "reload", defer: true, async: "", nonce: true
     
     -# Animate styles
-    = javascript_include_tag "aos", "data-turbo-track": "reload", defer: true, async: "", nonce: :nonce
-    = stylesheet_link_tag "aos", "data-turbo-track": "reload", nonce: :nonce
+    = javascript_include_tag "aos", "data-turbo-track": "reload", defer: true, async: "", nonce: true
+    = stylesheet_link_tag "aos", "data-turbo-track": "reload", nonce: true
 
     -# CookieBot
-    %script{id: "CookieDeclaration", src: "https://consent.cookiebot.com/b96db7a3-49c9-4675-a08d-7f34dbddfb4e/cd.js", type: "text/javascript", nonce: :nonce}
+    %script{id: "CookieDeclaration", src: "https://consent.cookiebot.com/b96db7a3-49c9-4675-a08d-7f34dbddfb4e/cd.js", type: "text/javascript", nonce: true}
     
     -# FlowbiteJS
-    %link{href: "https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.5.1/flowbite.min.css", rel: "stylesheet", nonce: :nonce}
-    %script{async: "", src: "https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.5.1/flowbite.min.js", nonce: :nonce}
+    %link{href: "https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.5.1/flowbite.min.css", rel: "stylesheet", nonce: true}
+    %script{async: "", src: "https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.5.1/flowbite.min.js", nonce: true}
 
     %noscript
       %img{height: "1", width: "1",
           src: "https://www.facebook.com/tr?id=1562402937679169&ev=PageView&noscript=1",
           style: "display:none"}
   
-  %body{class: "bg-stone-100", id: "main", "data-controller": "landing--index"}
+  %body{class: "bg-stone-100", id: "main"}
     %navigation{class: ""}
       = render "shared/navigation"
-      -#= @cookie_value.nil?
-    %main{class: ""}
+    %main{class: "", "data-controller": "landing--index"}
       = yield
     %footer{class: "relative start-0 bottom-0", id: "footer"}
       = render "shared/footer"
