--- a/app/views/shared/_cookies_bar.html.haml
+++ b/app/views/shared/_cookies_bar.html.haml
@@ -1,4 +1,4 @@
-%div{id: "cookies-bar", class: "cookies-bar fixed bottom-0 p-6 w-full flex justify-center z-[2000]"}
+%div{id: "cookies-bar","data-controller": "cookies", class: "cookies-bar fixed bottom-0 p-6 w-full flex justify-center z-[2000]"}
   %div{class: "bg-white bg-opacity-95 text-xs rounded-md fade show w-[1200px]"}
     %div{class: "p-4 flex items-center justify-between px-6 rounded border border-green-700"}
       %p
@@ -6,6 +6,6 @@
         = link_to "#{t ("cookies.link")}", policy_path, target: "_blank", class: "text-red-500 hover:border-b-2 hover:border-red-500"
         = t ("cookies.p2")
       %div{class: "flex inline-block"}
-        = link_to "#{t ("cookies.reject")}", request.original_url, data: { action: "click->landing--index#rejectCookies" }, class: "mx-1 px-2 hover:text-red-500 reject", id: "reject"
-        = link_to "#{t ("cookies.accept")}", request.original_url, data: { action: "click->landing--index#allowCookies" }, class: "mx-1 px-2 bg-stone-100 hover:text-red-500 border border-red-500 rounded-lg accept", id: "accept"
+        = link_to "#{t ("cookies.reject")}", request.original_url, data: { action: "click->cookies#rejectCookies" }, class: "mx-1 px-2 hover:text-red-500 reject", id: "reject"
+        = link_to "#{t ("cookies.accept")}", request.original_url, data: { action: "click->cookies#allowCookies" }, class: "mx-1 px-2 bg-stone-100 hover:text-red-500 border border-red-500 rounded-lg accept", id: "accept"
         
