--- a/app/views/shared/_6_reviews.html.haml
+++ b/app/views/shared/_6_reviews.html.haml
@@ -12,22 +12,22 @@
         %div{class: "relative h-96 overflow-hidden rounded-lg md:h-96"}
           -# Item 1
           %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
-            = image_tag("services_slide_1.avif", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
+            = image_tag("services_slide_1.avif", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "..."), loading: 'lazy'
           -# Item 2
           %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
-            = image_tag("services_slide_2.avif", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
+            = image_tag("services_slide_2.avif", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "..."), loading: 'lazy'
           -# Item 3
           %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
-            = image_tag("services_slide_3.avif", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
+            = image_tag("services_slide_3.avif", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "..."), loading: 'lazy'
           -# Item 4
           %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
-            = image_tag("services_slide_4.avif", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
+            = image_tag("services_slide_4.avif", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "..."), loading: 'lazy'
           -# Item 5
           %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
-            = image_tag("services_slide_5.avif", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
+            = image_tag("services_slide_5.avif", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "..."), loading: 'lazy'
           -# Item 6
           %div{class: "hidden duration-1000 ease-in-out", "data-carousel-item": ""}
-            = image_tag("services_slide_6.avif", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "...")
+            = image_tag("services_slide_6.avif", class: "absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2", alt: "..."), loading: 'lazy'
         -# Slider indicators
         %div{class: "absolute z-30 flex bottom-5 space-x-3 rtl:space-x-reverse translate-x-1/2 left-1/2"}
           %button{class: "w-3 h-3 rounded-full", "aria-current": "true", "aria-label": "Slide 1", "data-carousel-slide-to": "0", type: "button"}
