--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -21,7 +21,7 @@
       %div{class: "relative"}
         %dt
           %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-            = image_tag "mashine.svg", width: "35px", alt: "#{t "service.dl1.dt.alt"}"
+            = image_tag "mashine.svg", width: "35px", alt: "#{t "service.dl1.dt.alt"}", loading: 'lazy'
           %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
             = t ("service.dl1.dt.p")
         %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
@@ -29,7 +29,7 @@
       %div{class: "relative"}
         %dt
           %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-            = image_tag "button.svg", width: "35px", alt: "#{t "service.dl2.dt.alt"}"
+            = image_tag "button.svg", width: "35px", alt: "#{t "service.dl2.dt.alt"}", loading: 'lazy'
           %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
             = t ("service.dl2.dt.p")
         %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
@@ -37,7 +37,7 @@
       %div{class: "relative"}
         %dt
           %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-            = image_tag "spool.svg", width: "35px", alt: "#{t "service.dl3.dt.alt"}"
+            = image_tag "spool.svg", width: "35px", alt: "#{t "service.dl3.dt.alt"}", loading: 'lazy'
           %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
             = t ("service.dl3.dt.p")
         %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
@@ -45,7 +45,7 @@
       %div{class: "relative"}
         %dt
           %div{class: "absolute flex items-center justify-center h-12 w-12 rounded-md bg-primary-500 text-white"}
-            = image_tag "model.svg", width: "35px", alt: "#{t "service.dl4.dt.alt"}"
+            = image_tag "model.svg", width: "35px", alt: "#{t "service.dl4.dt.alt"}", loading: 'lazy'
           %p{class: "font-heading ml-16 text-lg leading-6 font-bold text-gray-700"}
             = t ("service.dl4.dt.p")
         %dd{class: "mt-2 ml-16 text-base text-gray-500 text-justify"}
@@ -59,9 +59,9 @@
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: service_path(service)}
         %div{class: "row"}
           - if service.image.attached?
-            = image_tag(service.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0", alt: service.title)
+            = image_tag(service.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0", alt: service.title, loading: 'lazy')
           - else
-            = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0", alt: service.title)
+            = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0", alt: service.title, loading: 'lazy')
           %div{class: "p-4 pt-2 h-auto md:min-h-[200px] md:max-h-[400px] lg:max-h-[450px] xl:max-h-[450px] 2xl:w-max-300"}
             %div{class: "mb-8"}
               %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
@@ -80,9 +80,9 @@
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: service_path(service)}
         %div{class: "row"}
           - if service.image.attached?
-            = image_tag(service.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
+            = image_tag(service.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title, loading: 'lazy')
           - else
-            = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title)
+            = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title, loading: 'lazy')
           %div{class: "p-4 pt-2 h-auto md:min-h-[200px] md:max-h-[400px] lg:max-h-[450px] xl:max-h-[450px] 2xl:w-max-300"}
             %div{class: "mb-8"}
               %h3{class: "text-stone-900 font-bold text-lg mb-2 hover:text-red-500 inline-block"}
