--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
     = stylesheet_link_tag "aos", "data-turbo-track": "reload", nonce: true
 
     -# CookieBot
-    %script{id: "CookieDeclaration", src: "https://consent.cookiebot.com/b96db7a3-49c9-4675-a08d-7f34dbddfb4e/cd.js", type: "text/javascript", nonce: true, asynk: true}
+    -#%script{id: "CookieDeclaration", src: "https://consent.cookiebot.com/b96db7a3-49c9-4675-a08d-7f34dbddfb4e/cd.js", type: "text/javascript", nonce: true, asynk: true}
     
     -# FlowbiteJS
     %link{href: "https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.5.1/flowbite.min.css", rel: "stylesheet", nonce: true}
