--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -6,7 +6,7 @@
       "@type": "Article",
       "headline": "#{article.title}",
       "description": "#{article.description}",
-      "logo": "#{article.image}",
+      "image": "#{article.image}",
       "url": "#{article_url(article)}",
       "datePublished":"#{article.created_at}",
       "dateModified": "#{article.updated_at}"
