--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -7,7 +7,7 @@
         "headline": "#{@article.title}",
         "description": "#{@article.description}"
         "articleBody": "#{@article.body}"
-        "logo": "#{@article.image}",
+        "image": "#{@article.image}",
         "url": "#{request.url}"
       }
 
