--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -59,7 +59,7 @@
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: service_path(service)}
         %div{class: "row"}
           - if service.image.attached?
-            = image_tag(service.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0", alt: service.title, loading: 'lazy')
+            = image_tag(service.image.variant(convert: "avif", resize_to_limit: [250, 125]), class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0", alt: service.title, loading: 'lazy')
           - else
             = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter hover:grayscale-[50%] grayscale-0", alt: service.title, loading: 'lazy')
           %div{class: "p-4 pt-2 h-auto md:min-h-[200px] md:max-h-[400px] lg:max-h-[450px] xl:max-h-[450px] 2xl:w-max-300"}
@@ -80,7 +80,7 @@
       %a{class: "rounded-xl shadow-lg hover:shadow-lg hover:shadow-red-300", href: service_path(service)}
         %div{class: "row"}
           - if service.image.attached?
-            = image_tag(service.image, class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title, loading: 'lazy')
+            = image_tag(service.image.variant(convert: "avif", resize_to_limit: [250, 125]), class: "rounded-t-xl w-full h-[150px] sm:w-full sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title, loading: 'lazy')
           - else
             = image_tag("favicon.png", class: "rounded-t-xl w-full h-[150px] sm:h-[200px] transition-all duration-300 cursor-pointer filter grayscale-[50%] hover:grayscale-0", alt: service.title, loading: 'lazy')
           %div{class: "p-4 pt-2 h-auto md:min-h-[200px] md:max-h-[400px] lg:max-h-[450px] xl:max-h-[450px] 2xl:w-max-300"}
