--- a/app/views/articles/_article.html.haml
+++ b/app/views/articles/_article.html.haml
@@ -3,7 +3,7 @@
     %div{class: "w-full px-4"}
       %sectionmx-auto{class: "p-5 sm:p-10 md:p-16 relative font-messiri"}
         - if @article.image.present?
-          %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{url_for(@article.image.variant(convert: "avif", resize_to_limit: [250, 125]))}')", title: @article.title, role: "img", "aria-label": @article.title}
+          %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{url_for(@article.image)}')", title: @article.title, role: "img", "aria-label": @article.title}
         - else
           %div{class: "bg-cover bg-center text-center overflow-hidden", style: "min-height: 450px; background-image: url('#{asset_path("favicon.png")}')", title: @article.title, role: "img", "aria-label": @article.title}
         %div{class: "max-w-5xl mx-auto mb-8"}
