--- a/app/views/services/show.html.haml
+++ b/app/views/services/show.html.haml
@@ -2,13 +2,31 @@
   %script{:type => "application/ld+json"}
     :plain
       {
-      "@context": "http://schema.org",
-      "@type": "Service",
-      "name": "#{@service.title}",
-      "alternateName": "#{@service.subtitle}",
-      "description": "#{@service.description}",
-      "logo": "#{@service.image}",
-      "url": "#{service_url(@service)}"
+        "@context":"https://schema.org",
+        "@type":"Product",
+        "productID":"#{service.id}",
+        "name":"#{service.title}",
+        "alternateName": "#{service.subtitle}",
+        "description":"#{service.description}",
+        "url":"#{service_url(service)}",
+        "image":"#{service.image}",
+        "brand":"☞ДРУЖБА☜",
+        "offers": [
+          {
+            "@type": "Offer",
+            "price": "#{service.price}",
+            "priceCurrency": "UAH",
+            "itemCondition": "new",
+            "availability": "in stock"
+          }
+        ]
+      //"@context": "http://schema.org",
+      //"@type": "Service",
+      //"name": "#{@service.title}",
+      //"alternateName": "#{@service.subtitle}",
+      //"description": "#{@service.description}",
+      //"logo": "#{@service.image}",
+      //"url": "#{service_url(@service)}"
       }
 
 %div{class: "container mx-auto my-4 font-messiri"}
